Fixed location icon and error message

--- a/app.html
+++ b/app.html
@@ -16,7 +16,7 @@
 
 <!--<script src="js/jquery-3.3.1.js"></script>-->
 
-<script   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQeOCQuyykCzjnb2M874aEVpHTl3RRR6Y&callback=initMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQeOCQuyykCzjnb2M874aEVpHTl3RRR6Y"></script>
 
 <script src="js/oslohavn2.js" defer></script>
 
