New marker icons
New marker icons and placed Paléhaven and lysthuset geo positions

--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>app</title>
+<title>Oslo havn 1798</title>
 
 <link rel="stylesheet" type="text/css" href="css/oslohavn1798.css" />
 
