Infowindow and styling, 3D-model and 360 image

--- a/app.html
+++ b/app.html
@@ -5,6 +5,7 @@
 <title>Oslo havn 1798</title>
 
 <link rel="stylesheet" type="text/css" href="css/oslohavn1798.css" />
+<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
 
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1" />
 
@@ -16,11 +17,16 @@
 
 <div id="map"></div>
 
-<!--<script src="js/jquery-3.3.1.js"></script>-->
+<script src="js/jquery-3.3.1.js"></script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQeOCQuyykCzjnb2M874aEVpHTl3RRR6Y"></script>
 
+
 <script src="js/oslohavn2.js" defer></script>
+
+    <div id="content">
+      Hello world!
+    </div>
 
 <button type="button" id="toggleWatchBtn">Start Watching</button>
 </body>
