More content on map
Added content: 3D-models, 360-photos.

--- a/app.html
+++ b/app.html
@@ -24,9 +24,9 @@
 
 <script src="js/oslohavn2.js" defer></script>
 
-    <div id="content">
+ <!--   <div id="content">
       Hello world!
-    </div>
+    </div>-->
 
 <button type="button" id="toggleWatchBtn">Start Watching</button>
 </body>
