--- a/app.html
+++ b/app.html
@@ -17,7 +17,7 @@
 
 <div id="map"></div>
 
-<script src="js/jquery-3.3.1.js"></script>
+<script src="js/jquery-3.3.1.min.js"></script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQeOCQuyykCzjnb2M874aEVpHTl3RRR6Y"></script>
 
