--- a/historiske_kilder.html
+++ b/historiske_kilder.html
@@ -11,7 +11,7 @@
 <p><a href="https://forskning.no/blogg/ragnhild-hutchisons-blogg/hvordan-rekonstruerer-vi-oslo-havn-i-1798-digitalt">Hvordan rekonstruerer vi Oslo havn i 1798 digitalt?</a></p>
 <p><a href="https://forskning.no/blogg/ragnhild-hutchisons-blogg/importen-til-oslo-havn-pa-slutten-av-1799-tallet">Importen til Oslo havn på slutten av 1700-tallet</a></p>
 <p><a href="https://forskning.no/blogg/ragnhild-hutchisons-blogg/sagspon-i-oslo-havn-pa-1700-tallet-plage-og-mulighet">Sagspon i Oslo havn på 1700-tallet– plage og mulighet</a></p>
-<p><a href="https://forskning.no/blogg/ragnhild-hutchisons-blogg/palehaven-park-skole-og-na-steinplass-med-muligheter">Brannforsikng – unike innblikk i 1700-tallets norske byer</a></p>
+<p><a href="https://forskning.no/blogg/ragnhild-hutchisons-blogg/palehaven-park-skole-og-na-steinplass-med-muligheter">Brannforsikring – unike innblikk i 1700-tallets norske byer</a></p>
 <p><a href="https://forskning.no/blogg/ragnhild-hutchisons-blogg/palehaven-park-skole-og-na-steinplass-med-muligheter">Paleèhaven – park, skolehave og nå steinplass med muligheter</a></p>
 <p><a href="https://forskning.no/blogg/ragnhild-hutchisons-blogg/tollboden-pa-1700-tallet-porten-til-verden">Tollboden på 1700-tallet – porten til verden</a></p>
 <p><a href="https://forskning.no/blogg/ragnhild-hutchisons-blogg/oslos-sjoboder-pa-1700-tallet">Oslos sjøboder på 1700-tallet</a></p>
