--- a/om_oslo_havn.html
+++ b/om_oslo_havn.html
@@ -2,11 +2,12 @@
 <html>
     <body>
 <h1>Om Oslo havn 1798</h1>
-<p>Prosjektet <i>Oslo havn 1798</i> utvikler en interaktiv opplevelse langs Oslo havn (Havnepromenaden) som gir publikum – både barn og voksne – innblikk i Oslos og Norges historie og kunsthistorie på slutten av 1700-tallet. Prosjektet stimulerer også til utvikling av historiebevissthet.</p>
-<p><i>Oslo havn 1798</i> kan oppleves på smarttelefon, pad, og pc. Augmented reality (AR) og spillteknologi brukes til å utvikle en digital verden som gir publikum en interaktiv opplevelse av Oslo havn 1798. Med skilt som informerer om nettadresse og qr-koder til opplevelsene, samt <a href="http://luktboks.no/">luktbokser</a> fungerer infopunktene 9, 10 og 11 (konteinerne) langs <a href="https://www.oslo.kommune.no/politikk-og-administrasjon/slik-bygger-vi-oslo/fjordbyen/havnepromenaden/#gref">Havnepromenaden i Oslo</a> som porter til denne verdenen.</p>
-<p>Den digitale verdenen skal visuelt speile 1700-tallets samfunn og gi innblikk i den tidens kunst og materielle uttrykk. Oslo havn 1798 skal også være en inngang til digitalisert kulturhistorisk materiale som arkiv, museum og biblioteket har gjort tilgjengelig. Kunnskapen og erfaringene fra prosjektet knyttet til formidlingsmetoder, digitalisering av kulturhistorisk materiale og plassering av en digital opplevelse i byrommet, vil være til nytte både for den fremvoksende kulturnæringen og for kulturinstitusjoner som museer, arkiv og biblioteket.</p> 
+<p>Prosjektet <i>Oslo havn 1798</i> er en interaktiv opplevelse langs Oslo havn (Havnepromenaden) som gir publikum – både barn og voksne – ett sanselig inntrykk av Oslos og Norges historie og kunsthistorie på slutten av 1700-tallet. Visuelt og lydmessig er Oslo havn 1798 en digital verden. Den er likevel fortøyd i den fysiske verden gjennom <a href="http://luktboks.no/" target="_blank">luktbokser</a> og vektleggingen av stedet.</p>
+<p><i>Oslo havn 1798</i> kan oppleves på smarttelefon, pad, og pc. For den beste opplevelsen skal du stå på stedene som er gjenskapt, og der se,  lytte, og lukte til det som kjennetegnet dem i 1798. Du skal også reflektere over om, og hvordan, disse stedene har forandret seg.</p>
+<p>Spillteknologi, Virtual reality og Augmented reality (AR) er brukt til å utvikle den digitale delen av opplevelsen. Skilt på <a href="https://www.oslo.kommune.no/politikk-og-administrasjon/slik-bygger-vi-oslo/fjordbyen/havnepromenaden/#gref" target="_blank">«de oransje konteinerne»</a> i Bjørvika langs Havnepromenaden er de fysiske inngangene til den digitale verdenen, men har også litt ekstra informasjon om noen av stedene. På disse skiltene finnes også luktbokser.</p>
+<p>Bygningene, havneområdet og alle andre deler av <i>Oslo havn 1798</i> bygger på forskning gjort av historikere, kulturhistorikere og arkeologer. Lenker til referanser og ytterligere informasjon er tilgjengelig i tilknytning til opplevelsene.</p>
 <p>Prosjektet startet januar og avsluttes juni 2018.</p>
-</br></br>  </br></br>  
+</br></br></br></br>  
 
 
   </body>
