--- a/app.html
+++ b/app.html
@@ -6,7 +6,9 @@
   <title>Oslo havn 1798</title>
 
   <link rel="stylesheet" type="text/css" href="css/oslohavn1798.css" />
-  <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+  <!--<link rel="stylesheet" type="text/css" href="css/perfect-scrollbar.css" />-->
+
+  <!--<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>-->
 
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1" />
 
@@ -18,27 +20,27 @@
     <button type="button" id="toggleWatchBtn">Finn meg på kartet!</button>
 
     <!-- Trigger/Open The Modal -->
-    <button type="button" id="myBtn">
+<!--    <button type="button" id="myBtn">
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
         <path d="M14 9.5c0-0.825 0.675-1.5 1.5-1.5h1c0.825 0 1.5 0.675 1.5 1.5v1c0 0.825-0.675 1.5-1.5 1.5h-1c-0.825 0-1.5-0.675-1.5-1.5v-1z"></path>
         <path d="M20 24h-8v-2h2v-6h-2v-2h6v8h2z"></path>
         <path d="M16 0c-8.837 0-16 7.163-16 16s7.163 16 16 16 16-7.163 16-16-7.163-16-16-16zM16 29c-7.18 0-13-5.82-13-13s5.82-13 13-13 13 5.82 13 13-5.82 13-13 13z"></path>
       </svg>
-    </button>
+    </button>-->
   </div>
 
 
   <!-- The Modal -->
-  <div id="myModal" class="modal">
+ <!-- <div id="myModal" class="modal">-->
 
     <!-- Modal content -->
-    <div class="modal-content">
+ <!--   <div class="modal-content">-->
       <!--<div class="modal-header">
         <h2>Modal Header</h2>
       </div>-->
-      <div class="modal-body">
+  <!--   <div class="modal-body">
         <span class="close">&times;</span>
-        <h1>Hvor staar til?</h1>
+        <h1>Hvor staar til, reisende?</h1>
         <p>Når du nå beveger deg inn i den digitale verdenen Oslo havn 1798 er du skipper Nils J. Strøm. Du har nettopp har
           ankommet med skipet «Abigale Mara» som har vært i London med trelast. Du trenger å orientere seg litt i byen, så
           finn følgende steder i det digitale kartet:</p>
@@ -76,19 +78,19 @@
         </label>
 
         <h2>Lykke til og god tur i Oslo havn i 1798</h2>
-      </div>
+      </div>-->
       <!--<div class="modal-footer">
         <h3>Modal Footer</h3>
       </div>-->
-    </div>
+ <!--   </div>
 
-  </div>
+  </div>-->
 
-  <a href="index.html">
+ <!-- <a href="index.html">
     <div id="logo-box-app">
       <img id="logo-app" src="img/logo-app.svg" />
     </div>
-  </a>
+  </a>-->
 
   <div id="map"></div>
 
@@ -102,12 +104,14 @@
 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQeOCQuyykCzjnb2M874aEVpHTl3RRR6Y"></script>
 
+  <!--<script src="js/perfect-scrollbar.min.js"></script>-->
+
   <script src="js/oslohavn2.js" defer></script>
 
   <script>
 
     // Get the modal
-    var modal = document.getElementById('myModal');
+    /*var modal = document.getElementById('myModal');
 
     // Get the button that opens the modal
     var btn = document.getElementById("myBtn");
@@ -130,20 +134,24 @@
       if (event.target == modal) {
         modal.style.display = "none";
       }
-    }
+    }*/
 
-    var is_mobile = ((/Mobile|iPhone|iPod|BlackBerry|Windows Phone/i).test(navigator.userAgent || navigator.vendor || window.opera) ? true : false);
+	/*var is_xs = window.innerWidth < 768;
+	if (!is_xs) {
+		// initialize scroller
+		const ps = new PerfectScrollbar('div.modal-content', {});
 
-if ( !is_mobile ) {
-  // whatever the init call is
-  perfectScroller.init()
-}
+	ps;
+	}*/
 
     /*var soundb = document.getElementById("sound");*/
 
     /*music.onclick = function () {
       soundb.play();
     }*/
+
+ 
+
 
 
   </script>
