Finishing touches + game
Added Unity Webgl game.
Mobile css adjustements
low res map
English pages.

--- a/app.html
+++ b/app.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120063722-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120063722-1');
+</script>
+
   <meta charset="UTF-8">
   <title>Oslo havn 1798</title>
 
@@ -16,7 +26,7 @@
 
 <body>
 
-  <div id="button-menu">
+  <!--<div id="button-menu">-->
     <button type="button" id="toggleWatchBtn">Finn meg på kartet!</button>
 
     <!-- Trigger/Open The Modal -->
@@ -27,7 +37,7 @@
         <path d="M16 0c-8.837 0-16 7.163-16 16s7.163 16 16 16 16-7.163 16-16-7.163-16-16-16zM16 29c-7.18 0-13-5.82-13-13s5.82-13 13-13 13 5.82 13 13-5.82 13-13 13z"></path>
       </svg>
     </button>-->
-  </div>
+  <!--</div>-->
 
 
   <!-- The Modal -->
