--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta property="og:title" content="Oslo havn 1798">
+	<meta property="og:description" content="En interaktiv historieopplevelse.">
+	<meta property="og:image" content="https://oslohavn1798.no/img/oslohavn1798.jpg">
+	<meta property="og:url" content="https://oslohavn1798.no">
+	<meta name="twitter:card" content="summary_large_image">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120063722-1"></script>
 <script>
@@ -36,6 +41,7 @@
 				<li><a href="om_oslo_havn">Om Oslo havn 1798</a></li>
 				<li><a href="om_tidvis">Hvem er vi?</a></li>
 				<li><a href="historiske_kilder">Historien</a></li>
+				<li><a href="vi_takker">Vi takker</a></li>
 			</ul>
 		</nav>
 		
@@ -43,7 +49,7 @@
 			<div class="hamburger"></div>
 		</div>
 
-		<div id="language-bar">
+		<!--<div id="language-bar">
 			<a href="index.html" target="self"><svg class="norway-flag" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 480">
 					<path fill="#ed2939" d="M0 0h640v480H0z"/>
 					<path fill="#fff" d="M180 0h120v480H180z"/>
@@ -67,7 +73,7 @@
 					  </g>
 					</g>
 				  </svg></a>
-		</div>
+		</div>-->
 		<!--	<ul>
 				<li class="norway-flag"><a href="index.html"></a></li>
 				<li class="uk-flag"><a href="#"></a></li>
