--- a/index_eng.html
+++ b/index_eng.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta property="og:title" content="Oslo havn 1798">
+	<meta property="og:description" content="En interaktiv historieopplevelse.">
+	<meta property="og:image" content="https://oslohavn1798.no/img/oslohavn1798.jpg">
+	<meta property="og:url" content="https://oslohavn1798.no">
+	<meta name="twitter:card" content="summary_large_image">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120063722-1"></script>
 <script>
@@ -36,6 +41,7 @@
 				<li><a href="om_oslo_havn_eng">About the project</a></li>
 				<li><a href="om_tidvis_eng">About us</a></li>
 				<li><a href="historiske_kilder_eng">The history</a></li>
+				<li><a href="vi_takker_eng">We thank</a></li>
 			</ul>
 		</nav>
 		
