--- a/start.html
+++ b/start.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <body>
-<h1>Her kommer interaksjons&shy;prosjektet Oslo havn 1798</h1>
-<p>Prosjektet skal utvikle en interaktiv opplevelse langs Oslo havn (Havne&shy;promenaden) som gir publikum, både barn og voksne, innblikk i Oslos og Norges historie og kunst&shy;historie på slutten av 1700-tallet. Oslo havn 1798 utvikles av <a href="http://www.tidvis.no/" target="_blank">Tidvis AS</a>. 
+<h1>Velkommen<br>til Oslo havn 1798</h1>
+<p>Oslo havn 1798 har som mål å gi publikum, både barn og voksne, innblikk i Oslos og Norges historie på slutten av 1700-tallet på nye måter. Vi oppfordrer til at den oppleves stående ute i Bjørvikaområdet, men den kan også oppleves bare på skjerm. Oslo havn 1798 er utviklet av <a href="http://www.tidvis.no/" target="_blank">Tidvis AS</a>.</p>
 </p><p>Følg prosjektet på <a href="https://www.facebook.com/Oslohavn1798/" target="_blank">Facebook</a>.</p>
 
-<button type="button" id="app-button" onclick="window.location.href='app.html'" target="_self">Start tidsmaskinen (beta)</button>
+<button type="button" id="app-button" onclick="window.location.href='app.html'" target="_self">Start tidsmaskinen</button>
     </body>
 <br><br><br>
 
