--- a/app.html
+++ b/app.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" href="https://oslohavn1798.no/favicon.ico?v=2" type="image/x-icon" />
     <meta property="og:title" content="Oslo havn 1798">
     <meta property="og:description" content="En interaktiv historieopplevelse.">
     <meta property="og:image" content="https://oslohavn1798.no/img/oslohavn1798.jpg">
@@ -20,7 +21,8 @@
   <meta charset="UTF-8">
   <title>Oslo havn 1798</title>
 
-  <link rel="stylesheet" type="text/css" href="css/oslohavn1798.css" />
+  <link rel="stylesheet" type="text/css" href="css/oslohavn1798.min.css" />
+  <!--<link rel="stylesheet" type="text/css" href="css/oslohavn1798.css" />-->
   <!--<link rel="stylesheet" type="text/css" href="css/perfect-scrollbar.css" />-->
 
   <!--<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>-->
@@ -32,7 +34,7 @@
 <body>
 
   <div id="button-menu">
-    <button type="button" id="toggleWatchBtn">Finn meg på kartet!</button>
+    <!--<button type="button" id="toggleWatchBtn">Hvor er jeg?</button>-->
 
     <button type="button" id="ToggleOverlayBtn" value="Toggle visibility" onclick="overlay.toggle();">
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
@@ -127,7 +129,9 @@
 
   <!--<script src="js/perfect-scrollbar.min.js"></script>-->
 
-  <script src="js/oslohavn2.js" defer></script>
+  <!--<script src="js/oslohavn2.js" defer></script>-->
+  <script src="js/oslohavn2.min.js" defer></script>
+
 
   <script>
 
