--- a/om_oslo_havn.html
+++ b/om_oslo_havn.html
@@ -2,11 +2,13 @@
 <html>
     <body>
 <h1>Om Oslo havn 1798</h1>
+<p><i>Oslo havn 1798</i> har som mål å gi publikum, både barn og voksne, innblikk i Oslos og Norges historie på slutten av 1700-tallet på nye måter. Vi oppfordrer til at den oppleves stående ute i Bjørvikaområdet, men den kan også oppleves bare på skjerm. Oslo havn 1798 er utviklet av <a href="http://www.tidvis.no/" target="_blank">Tidvis AS</a>.</p>
 <p>Prosjektet <i>Oslo havn 1798</i> er en interaktiv opplevelse langs Oslo havn (Havnepromenaden) som gir publikum – både barn og voksne – ett sanselig inntrykk av Oslos og Norges historie og kunsthistorie på slutten av 1700-tallet. Visuelt og lydmessig er Oslo havn 1798 en digital verden. Den er likevel fortøyd i den fysiske verden gjennom <a href="http://luktboks.no/" target="_blank">luktbokser</a> og vektleggingen av stedet.</p>
 <p><i>Oslo havn 1798</i> kan oppleves på smarttelefon, pad, og pc. For den beste opplevelsen skal du stå på stedene som er gjenskapt, og der se,  lytte, og lukte til det som kjennetegnet dem i 1798. Du skal også reflektere over om, og hvordan, disse stedene har forandret seg.</p>
 <p>Spillteknologi, Virtual reality og Augmented reality (AR) er brukt til å utvikle den digitale delen av opplevelsen. Skilt på <a href="https://www.oslo.kommune.no/politikk-og-administrasjon/slik-bygger-vi-oslo/fjordbyen/havnepromenaden/#gref" target="_blank">«de oransje konteinerne»</a> i Bjørvika langs Havnepromenaden er de fysiske inngangene til den digitale verdenen, men har også litt ekstra informasjon om noen av stedene. På disse skiltene finnes også luktbokser.</p>
 <p>Bygningene, havneområdet og alle andre deler av <i>Oslo havn 1798</i> bygger på forskning gjort av historikere, kulturhistorikere og arkeologer. Lenker til referanser og ytterligere informasjon er tilgjengelig i tilknytning til opplevelsene.</p>
-<p>Prosjektet startet januar og avsluttes juni 2018.</p>
+<p>Prosjektet startet i januar og ble avsluttet i juni 2018.</p>
+<p>Følg prosjektet på <a href="https://www.facebook.com/Oslohavn1798/" target="_blank">Facebook</a>.</p>
 </br></br></br></br>  
   </body>
 </html>
