--- a/om_oslo_havn_eng.html
+++ b/om_oslo_havn_eng.html
@@ -2,6 +2,8 @@
 <html>
     <body>
 <h1>About the project</h1>
+<p>This is an interactive experience developed by <a href="http://www.tidvis.no/" target="_blank">Tidvis AS</a> with the aim of giving the public access to Oslo's history in new and exciting ways. </p>
+<p>Follow the project on <a href="https://www.facebook.com/Oslohavn1798/" target="_blank">Facebook</a>.</p>
 <p><i>The Port of Oslo in 1798</i> is an interactive experience along the Harbour Promenade in Oslo. Sights, sounds and scents are recreated so that you can get a sensory impression of Oslo and Norway’s history and art history at the end of the 18th century. Visually, and through sound, <i>The Port of Oslo in 1798</i> is a digital world. It is nevertheless moored to the physical world by <a href="http://luktboks.no/" target="_blank">scent boxes</a> and the emphasis on location.</p>
 <p><i>The Port of Oslo in 1798</i> can be experienced on smartphones, tablets and PCs. For the full experience you should stand in the places recreated: seeing, listening and smelling what characterised them in 1798. You should also reflect on this, and how these places have changed.</p>
 <p>Gaming technology, virtual reality and augmented reality are used to develop the digital part of the experience. Signs on <a href="https://www.oslo.kommune.no/politikk-og-administrasjon/slik-bygger-vi-oslo/fjordbyen/havnepromenaden/#gref" target="_blank">“the orange containers”</a> along the Harbour Promenade are physical gateways to the digital world, but also provide information. They are also where the scent boxes are located.</p>
