--- a/start.html
+++ b/start.html
@@ -2,10 +2,10 @@
 <html>
     <body>
 <h1>Velkommen<br>til Oslo havn 1798</h1>
-<p>Oslo havn 1798 har som mål å gi publikum, både barn og voksne, innblikk i Oslos og Norges historie på slutten av 1700-tallet på nye måter. Vi oppfordrer til at den oppleves stående ute i Bjørvikaområdet, men den kan også oppleves bare på skjerm. Oslo havn 1798 er utviklet av <a href="http://www.tidvis.no/" target="_blank">Tidvis AS</a>.</p>
-</p><p>Følg prosjektet på <a href="https://www.facebook.com/Oslohavn1798/" target="_blank">Facebook</a>.</p>
+<p>Du kan utforske havnen på datamaskin, men den beste opplevelsen får du med mobiltelefonen i Bjørvika (landskapsformat anbefales). Du kan også benytte VR-briller som Google Cardboard.</p>
+<p>I denne 360-opplevelsen kan du finne 3D-modeller, film, lyd og musikk, spill og informasjon om forskjellige bygg og gater. Kikk rett ned og klikk på den røde knappen for et kart over området.</p>
 
-<button type="button" id="app-button" onclick="window.location.href='app.html'" target="_self">Start tidsmaskinen</button>
+<button type="button" id="app-button" onclick="window.location.href='1798.html'" target="_self">Start tidsmaskinen</button>
     </body>
 <br><br><br>
 
