--- a/start_eng.html
+++ b/start_eng.html
@@ -2,10 +2,10 @@
 <html>
     <body>
 <h1>Welcome to the Port <br>of Oslo in 1798</h1>
-<p>This is an interactive experience developed by <a href="http://www.tidvis.no/" target="_blank">Tidvis AS</a> with the aim of giving the public access to Oslo's history in new and exciting ways. 
-</p><p><p>Follow the project on <a href="https://www.facebook.com/Oslohavn1798/" target="_blank">Facebook</a>.</p>
+<p>You can explore the harbour on your computer, but you'll get the best experience with your smartphone (landscape mode) in Bjørvika. You can also use VR-goggles like Google Cardboard.</p>
+<p>In this 360-experience you'll find 3D models, movies, sounds and music, games and information about streets and buildings. Look straight down and click the red button for a map of the area.</p>
 
-<button type="button" id="app-button" onclick="window.location.href='app.html'" target="_self">Start the time machine</button>
+<button type="button" id="app-button" onclick="window.location.href='1798.html'" target="_self">Start the time machine</button>
     </body>
 
 
