--- a/brinchskran.html
+++ b/brinchskran.html
@@ -29,7 +29,7 @@
 	</a-assets>
         
 		
-        <a-marker type='pattern' url='img/pattern-marker.patt'>
+        <a-marker type='pattern' url='img/brinchs_kran.patt'>
 
 			<a-entity gltf-model="#brinch" scale="0.001 0.001 0.001" position="-0.3 -3.3 16" rotation="0 0 0">
 				<!--<a-animation attribute="rotation" dur="5000" to="450 0 0" easing="linear" repeat="indefinite"></a-animation>-->
