--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	<a href="index.html" target="_self"><div id="logo-box"><img id="logo" src="img/logo.png" /></div></a>
 	
 	<section id="main-content">
-	<div id="cover-text" lang="nb"></div>
+	<div id="cover-text" class="fade-up" lang="nb"></div>
 	<!--<div id="cover-text" class="fade-up" lang="nb"></div>-->
 	</section>
 
