--- a/index_eng.html
+++ b/index_eng.html
@@ -103,7 +103,7 @@
 	<a href="index_eng.html" target="_self"><div id="logo-box"><img id="logo" src="img/logo.png" /></div></a>
 	
 	<section id="main-content">
-	<div id="cover-text" class="cover-text_eng" lang="en"></div>
+	<div id="cover-text" class="cover-text_eng fade-up" lang="en"></div>
 	</section>
 
 	<div id=partnere>
