--- a/start_eng.html
+++ b/start_eng.html
@@ -3,9 +3,16 @@
 
 <h1>Welcome to the Port <br>of Oslo in 1798</h1>
 <p>In the Port of Oslo in 1798 you can experience what it may have been like to explore Oslo’s harbour at the end of the 18th century.</p>
-<p>Using your smartphone you can explore the web experience. This is a series of 360&deg; pictures, 3D models and much more. We recommend that you do this when in the harbour area. You can also use VR goggles like Google cardboard.</p>
-<p>If you're on a computer you can download the experience. This way you can explore in a full 3D environment.</p>
+<p>On your smartphone you can explore the 360&deg; option. If you're in the Bjørvika area you can compare with today's cityscape. You can also use VR goggles like Google Cardboard.</p>
+<p>If you're on a PC or Mac you can also download the experience as a game in full 3D.</p>
 
-<button type="button" id="app-button" class="first-button" onclick="window.location.href='1798.html'" target="_blank">TIME MACHINE (web/phone)</button>
-<a href="start"><button type="button" id="app-button" class="second-button" onclick="window.location.href='https://www.dropbox.com/sh/btjo28vyan37gc8/AADZcQ7q04Xf9y6D2cyL8fSHa?dl=0'" target="_blank">TIME MACHINE (download)</button></a> 
+<button type="button" id="app-button" class="first-button" onclick="window.open('1798.html')">TIME MACHINE (360&deg;)</button>
+<button type="button" id="app-button" class="second-button" onclick="window.open('https://tidvis.itch.io/oslohavn1798')">TIME MACHINE (3D)</button></a> 
+<button type="button" id="help" onclick="window.open('hjelp_eng.html')">Do you need assistance?</button>
+</br></br>
+<video style="margin-top:10px;" width="500" height="auto" controls>
+        <source src="mov/OsloHavnPromo_720.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+</video>
+
 </html>
