--- a/vi_takker.html
+++ b/vi_takker.html
@@ -33,7 +33,9 @@
     Geir Sagberg, 
     Joe Censored Games, 
     Adriane Vinter.</p>
-    <br><br>
+</br>
+<p>Musikk er hentet fra Hans Olav Gorset og Ånon Egelands CD-innspilling <a href="https://open.spotify.com/search/results/B%C3%B8nder%20og%20borgere" target="_blank">«for Borgere og Bønder»</a>.</p>
+<br><br>
 <p><span class="bold">Prosjektet har også nyttet:</span></br>
         <a href="http://wiki.unity3d.com/index.php/CSharpMessenger_Extended" target="_blank">CSharp Messenger Extended</a></p>
         <p>AQUAS water shader:</p>
