--- a/vi_takker_eng.html
+++ b/vi_takker_eng.html
@@ -33,6 +33,8 @@
     Geir Sagberg, 
     Joe Censored Games, 
     Adriane Vinter.</p>
+</br>
+<p>The music is from Hans Olav Gorset and Ånon Egeland's CD-recording <a href="https://open.spotify.com/search/results/B%C3%B8nder%20og%20borgere" target="_blank">«for Borgere og Bønder»</a>.</p>
     <br><br>
 <p><span class="bold">The project has also utilized:</span></br>
         <a href="http://wiki.unity3d.com/index.php/CSharpMessenger_Extended" target="_blank">CSharp Messenger Extended</a></p>
