--- a/start.html
+++ b/start.html
@@ -2,9 +2,15 @@
 <html>
 <h1>Velkommen<br>til Oslo havn 1798</h1>
 <p>I <i>Oslo havn 1798</i> kan du oppleve hvordan det kan ha vært å utforske havneområdet i Oslo på slutten av 1700-tallet.</p>
-<p>Er du på mobil, eller fysisk i Bjørvika, kan du utforske <i>Oslo havn 1798</i> ved å velge tidsmaskin for mobil. Da kommer du til 360&deg;-bilder, 3D-modeller og mye mer. Du kan også benytte VR-briller som Google Cardboard.</p>
-<p>Er du på en datamaskin kan du laste ned hele opplevelsen. Da kan du utforske havneområdet i 3D.</p>
-
-<button type="button" id="app-button" class="first-button" onclick="window.location.href='1798.html'" target="_blank">TIDSMASKIN (nett/mobil)</button>
-<a href="start"><button type="button" id="app-button" class="second-button" onclick="window.location.href='https://www.dropbox.com/sh/btjo28vyan37gc8/AADZcQ7q04Xf9y6D2cyL8fSHa?dl=0'" target="_blank">TIDSMASKIN (last ned)</button></a> 
+<p>På mobil kan du utforske havnen ved å velge <b>tidsmaskin (360&deg;)</b>. Er du fysisk i Bjørvika kan du sammenligne med dagens bybilde. Du kan også benytte VR-briller som Google Cardboard.</p>
+<p>På din PC eller Mac kan du kan også velge å laste ned hele opplevelsen som et spill i full 3D. Velg <b>tidsmaskin (3D)</b>.</p>
+<button type="button" id="app-button" class="first-button" onclick="window.open('1798.html')">TIDSMASKIN (360&deg;)</button>
+<button type="button" id="app-button" class="second-button" onclick="window.open('https://tidvis.itch.io/oslohavn1798')">TIDSMASKIN (3D)</button></a> 
+<button type="button" id="help" onclick="window.open('hjelp.html')">Trenger du teknisk hjelp?</button>
+</br></br>
+<video style="margin-top:10px;" width="500" height="auto" controls>
+        <source src="mov/OsloHavnPromo_720.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+</video>
+</br></br></br></br>
 </html>
