--- a/om_oslo_havn_eng.html
+++ b/om_oslo_havn_eng.html
@@ -9,8 +9,8 @@
 <p>The buildings, harbour area and all other aspects of the experience of The Port of Oslo in 1798 are based on research done by historians, cultural historians and archaeologists. Links to references to the research, as well as further information are provided in connection to the experiences.</p>
 <p>The first part of the project started January and ends June 2018. In this the majority of the 3D models were made.</p>
 <p>The second part of the project started January 2019 and ends in May. In this part the model is expanded and made interactive.</p>
-<p>Here you can download the models from the <a href="https://www.dropbox.com/sh/9nwzo2oss5pzwc8/AAAjOXPj4e4T8DvYR70eCTKDa?dl=0" target="_blank">first part</a> of the project as Unity project files with Dropbox.</p>
-<p>Here are the files for the <a href="https://www.dropbox.com/sh/9nwzo2oss5pzwc8/AAAjOXPj4e4T8DvYR70eCTKDa?dl=0" target="_blank">second part</a>.</p>
+<p>Here you can download the models from the <a href="https://tidvis.itch.io/oslo-havn-1798-the-port-of-oslo-1798-unity-project-files-part-i" target="_blank">first part</a> of the project as Unity project files on Itch.</p>
+<p>Here are the files for the <a href="https://tidvis.itch.io/the-port-of-oslo-1798-unity-project-files-part-ii" target="_blank">second part</a>.</p>
 <p><i>The Port of Oslo in 1798</i> and its content is available at a <a rel="license" href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-licence </a><a rel="license" href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img alt="Creative Commons-licence" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a> We encourage people to download, use, remix and build upon our work, as long as they share new content on the same terms and refer to Tidvis AS.</p>
 </br></br></br></br>  
 </html>
