--- a/om_oslo_havn.html
+++ b/om_oslo_havn.html
@@ -13,8 +13,10 @@
 
 <p>Prosjektet har til nå hatt to deler. Første del startet i januar og ble avsluttet i juni 2018. Da ble grunnlaget for 3D modellen lagt. Andre del startet i januar og avsluttes i mai. I denne skal modellen gjøres interaktiv og det skal legges inn flere steder å utforske.</p>
 
-<p>Her kan du laste ned hele Oslo havn 1798-modellen som Unity-prosjekt gjennom dropbox:</p>
-<p><a href="https://www.dropbox.com/sh/9nwzo2oss5pzwc8/AAAjOXPj4e4T8DvYR70eCTKDa?dl=0" target="_blank">Modellen etter del 1</a></p>
+<p>Her kan du laste ned hele Oslo havn 1798-modellen fra del 1 som Unity-prosjekt via Itch:</p>
+<p><a href="https://tidvis.itch.io/oslo-havn-1798-the-port-of-oslo-1798-unity-project-files-part-i" target="_blank">Modellen etter del 1</a></p>
+<p>Her kan du laste ned hele Oslo havn 1798-modellen fra del 2 som Unity-prosjekt via Itch:</p>
+<p><a href="https://tidvis.itch.io/the-port-of-oslo-1798-unity-project-files-part-ii" target="_blank"></a>Modellen etter del 2</p>
 
 <p><i>Oslo havn 1798</i> og dets innhold er tilgjengelig på <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/no/">CC-BY-SA-lisens </a><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/no/" target="_blank"><img alt="Creative Commons-lisens" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/3.0/no/80x15.png" /></a> Vi oppfordrer publikum til å laste ned, bruke, remikse og bygge videre på vårt arbeid, så lenge det som produseres deles med samme vilkår og at det tydelig refereres tilbake til Tidvis AS.</p>
 <p>Følg prosjektet på <a href="https://www.facebook.com/Oslohavn1798/" target="_blank">Facebook</a>.</p>
